wiki modifications of copy static

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -474,3 +474,356 @@ endclass
 
 ![Untitled Diagram drawio (11)](https://user-images.githubusercontent.com/110509375/190968789-2041ae50-f873-4e87-9f20-72f9d352f235.png)
 
+
+# parameterized classes
+Parameterized classes are useful when the same class needs to be instantiated differently. The default parameter can be set in the class definition. These parameters can be overridden when it is instantiated.
+The parameter value can be used to define a set of attributes in class. default values can be overridden by passing a new set of parameters during instantiation. this is called parameter overriding.
+
+## Parameterized by value
+
+**syntax**  
+class Vector #(parameter WIDTH=1);   
+  bit [WIDTH-1:0] data;  
+endclass  
+
+**Code Snippet**
+
+    class mirafra #(parameter int branch=32,employes=32);
+    bit [branch-1:0]b1;
+    bit [employes-1:0]b2;
+    function new();
+     b1=13;
+     b2=25;
+    endfunction
+    endclass
+    module value;
+    manipal p1;
+    manipal p2;
+     initial begin
+     p1=new();
+     $display("contents of p1 before value changes");
+     p1.disp();
+     p2=p1;//classs-assignment
+     $display("contents of p2 before value changes");
+     p2.disp();
+     p1.m.b2=4;
+     p2.x="BJT";
+     p2.y=8;
+     $display("contents of p1 after value changes");
+     p1.disp();
+     $display("contents of p2 after value changes");
+     p2.disp();
+     end
+    endmodule
+**Output**
+
+![parameter-value](https://user-images.githubusercontent.com/110509375/191565660-b167f2c8-9d3f-411e-9a77-3e67f1440a20.png)
+
+
+## Parameterized by type(datatype)
+Datatype is parameterized in this case and can also be over ridden in instantiated.
+
+**syntax**  
+class Stack #(parameter type T=int);  
+  T items[64], idx=0;  
+  function void push(input T val);  
+  function T pop();  
+endclass  
+
+**Code Snippet**
+
+    class data #(parameter int a=128,type team=string);//parameter declaration
+    bit [a-1:0]d;
+    team c;
+    function new();
+    d=8;
+    c="Mirafra";
+    endfunction
+    endclass
+
+    module test;
+    pack t1,t2;
+     initial begin
+     t2=new();
+     $display("contents of t2 before value changes");
+     t2.display();
+     t2.dt.d=3;
+     t2.dt.c="Teams";
+     t1=new t2;//shallow copy
+     $display("contents of t1 before value changes");
+     t1.display();
+     t1.y=8;
+     t2.x="BJT";
+     $display("contents of t1 after value changes");
+     t1.display();
+     $display("contents of t2 after value changes");
+     t2.display();
+     end
+    endmodule
+
+**Output**
+
+![parameter-type](https://user-images.githubusercontent.com/110509375/191565742-fb634e67-6592-4119-af22-5b065b5d3b36.png)
+
+
+# Copying Objects
+
+There are 3 types of Copying Objects  
+
+[1.Class Assignment](https://github.com/Bhavanasandrala/try/wiki/Copying-Objects#1class-assignment)  
+[2.Shallow copy](https://github.com/Bhavanasandrala/try/wiki/Copying-Objects/#2shallow-copy)  
+[3.Deep copy](https://github.com/Bhavanasandrala/try/wiki/Copying-Objects/#3deep-copy)  
+
+![Untitled Diagram drawio (16)](https://user-images.githubusercontent.com/110509375/191187874-0698167d-5015-4a78-ae15-676b20ea253a.png)
+
+
+## 1.Class Assignment
+
+With the class assignment both the original and copy class will point to same memory location. Any update to a variable from either of the classes will have impact on the other class.
+
+**syntax**  
+a=new();  
+b=a;    
+
+**Memory Allocation of Class Assignment**
+
+
+![Untitled Diagram drawio (23)](https://user-images.githubusercontent.com/110509375/191420357-e3175f7b-6a01-487e-8e37-9e58886c0ef9.png)
+
+
+
+
+
+
+
+In the above memory allocation we have say that p1 and p2 are sharing same memory and if we change one variable in one class(p1) it will be updated in other class(p2) also.
+
+**Code Snippet**
+
+    module assignment;
+    Mirafra p1;  
+    Mirafra p2;  
+
+    initial begin
+    p1=new();
+    $display("contents of p1 before changes");
+    p1.display();
+    p2=p1;
+    $display("contents of p2 before changes");
+    p2.display();
+    p2.c="BJT";
+    p2.pk.a="Team3";
+    p2.pk.b=4;
+    p2.d=8;
+    $display("contents of p1 after changes");
+    p1.display();
+    $display("contents of p2 after changes");
+    p2.display();
+    end
+    endmodule
+
+**Output**
+
+![class-assignment](https://user-images.githubusercontent.com/110509375/191419126-3d556014-f57e-4f96-83a3-4753769f064c.png)
+
+
+
+## 2.Shallow Copy
+
+When a class is shallow copied to another class, all the variables of the original class is copied to the copied class, with an exception of objects inside the class. In case the original class has a class object defined inside, that object would NOT be copied, only the handle for the object will be copied.This means the memory location of the object remain same. so if the object is updated from the copied class, this object value will be updated also for the original class.but if variable of copied class is update, it will NOT update the variable of the original class.
+
+**syntax**    
+a=new();  
+b=new a;  
+
+**Memory Allocation for Shallow Copy**
+
+![memory allocation for shallow copy](https://user-images.githubusercontent.com/110509375/191180549-5aef984e-3d20-4dc8-ae49-429ebfbde17e.png)
+
+In the above figure we can that memory allocation in p1 and p2 is same but variables change is updated only in the handle variables.
+
+**code snippet**
+
+    module shallow;
+    Mirafra p1;
+    Mirafra p2;
+     initial begin
+     p1 =new();
+     $display("contents of p1");
+     p1.display();
+
+     p2 =new p1;
+     $display("contents of p2");
+     p2.display();
+     p2.c="BJT";
+     p2.ar.a="Team3";
+     p2.ar.b=4;
+     $display("diplay contents of p1");
+     p1.display();
+     $display("diplay contents of p2");
+     p2.display();
+     end
+    endmodule 
+    
+**Output**
+
+![Untitled Diagram drawio (18)](https://user-images.githubusercontent.com/110509375/191252256-4ffdfd48-42c8-44ff-a1ec-3c8e8dfd152f.png)
+
+
+## 3.Deep Copy
+
+SystemVerilog deep copy copies all the class members and its nested class members. That means it will copy all the members to a different memory location including the object inside the class. Any change in members of one of the class will have NO impact on another class member.
+
+**syntax**  
+a=new();  
+b=new();  
+b.copy(a);  
+
+**Memory Allocation of Deep Copy**
+
+![Deepcopy](https://user-images.githubusercontent.com/110509375/191184281-b17e2055-da0b-46d7-8df6-d01f1e32bd85.png)
+
+In the above figure we can see p1 and p2 has different memories so if change or update any varibale only that class is updated because of different memory locations.
+
+**Code snippet** 
+
+    module deep;  
+    branches p1;  
+    branches p2;  
+     initial begin  
+     p1=new();
+     p2=new();
+     p2.deep(p1);//deep copy
+     $display("contents of branch p1 before changes");
+  
+     p1.disp();
+  
+     $display("contents of branch p2 before changes");
+  
+     p2.disp();
+     //changing the values of p1 and p2
+     p1.pk.a="BJT";
+     p2.pk.a="Mirafra-Teams";
+
+     p1.c="Manipal";
+     p2.d=9;
+
+     p2.c="Hyderabad";
+     p1.d=8;
+
+     $display("contents of branches p1 after changes");
+     p1.disp();
+     $display("contents of branches p2 after changes");
+     p2.disp();
+     end
+    endmodule 
+
+ **Output**
+
+![Untitled Diagram drawio (17)](https://user-images.githubusercontent.com/110509375/191194036-4e5e28a6-5dba-4aad-8555-72a4cc2d90d3.png)
+
+
+
+# Virtual Methods
+SystemVerilog Methods declared with the keyword virtual are referred to as virtual methods.
+
+![virtual](https://user-images.githubusercontent.com/110509375/191583969-4518ca96-6726-42ab-bc95-f11e618e4150.png)
+  
+Virtual Methods are two types    
+[1.Virtual Functions](https://github.com/Bhavanasandrala/try/wiki/Virtual-Methods#virtual-function)   
+[2.Virtual Tasks](https://github.com/Bhavanasandrala/try/wiki/Virtual-Methods#virtual-task)
+
+## Virtual Function
+
+A function declared with a virtual keyword before the function keyword is referred to as virtual Function, we use the virtual in base(parent)class function then only child class gets executed.
+
+**Code Snippet**
+
+    class packet;
+    string a;
+    int b;
+
+    function new();
+    a="Team";
+    b=4;
+    endfunction
+
+    virtual function void  display();
+    $display("a=%0d",a);
+    $display("b=%0d",b);
+    endfunction
+    endclass
+    module example;
+     initial begin
+     p2=new();
+     p3=new();
+     pp0=p2;
+     pp1=new p3;
+     //p1.display();
+     pp0.display();
+     pp1.display();
+     //p3.e=7;
+     //pp1.display();
+     end
+    endmodule
+
+**Output**
+
+![virtual-function](https://user-images.githubusercontent.com/110509375/191581515-4db81e3d-30be-48a9-9dd4-b242b5a49cfc.png)
+
+## Virtual Task
+
+Task declared with a virtual keyword before the task keyword is referred to as virtual task
+ 
+
+# OVer-riding Class Members
+Base class or parent class properties and methods can be overridden in the child class or extended class by defining the class properties and methods with the same name as parent class in the child class will override the class members.
+
+To override a method means that given a base class with a method, we can define a subclass which extends from that base class and then provide a new definition for the given method. By default, the subclass inherits the base class implementation of the method but should the programmer decide to change that definition by overriding it - simply listing a new version of that method, then the new version of the method will be used instead of the parent's.
+
+**Code Snippet**
+
+     module over_riding;
+     BJT c;
+      initial begin
+      c=new();
+      c.place = "mirafra";
+      c.Team="BJT";//over-riding parent-class members 
+      c.members = 8;
+      c.place="Manipal";
+      $display("contents after over-riding");
+      c.display();
+      end
+     endmodule
+
+
+**Output**
+
+![Untitled Diagram drawio (24)](https://user-images.githubusercontent.com/110509375/191424728-bffbec08-ebde-45c7-ac42-a6225dda6d6f.png)
+
+
+# Static Properties and Methods
+Class members can be created with the keyword static. class members with the keyword static are called as static class members. the class can have static properties and static methods (functions and tasks). a single copy of static variables is shared across multiple instances.
+
+![Untitled Diagram drawio (25)](https://user-images.githubusercontent.com/110509375/191484831-213dbc2c-1e17-4732-b794-9e8446091446.png)
+
+## Static Properties
+
+The static variable declared inside a class with static keyword shares a single memory location across all class instances.  
+
+
+
+
+**syntax**  
+`static <data_type> <variable_name>`
+
+## Static Methods
+
+Static methods are the same as static variables that also follow class access rules and scope.
+
+Static functions and tasks can not be virtual
+They can access only static properties (static members) of a class. Accessing non-static members leads to compilation errors as it is illegal to use. But non-static functions or tasks can access static variables.
+Both static methods and static members in a class can be accessed without creating an object.
+
+**syntax**  
+`static function <method_name>`
