--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -827,3 +827,384 @@ Both static methods and static members in a class can be accessed without creati
 
 **syntax**  
 `static function <method_name>`
+
+
+
+
+# Classes
+
+## Inheritance 
+
+Inheritance is a mechanism which allows child class to inherit the properties of base-class. Objects of child class will have access to attributes and methods of parent class. If child class inherits parent class, then parent class is called **super-class** and child class is called **subclass**. 
+
+
+![Inheritance-1](https://user-images.githubusercontent.com/110398433/191458387-7e5dfb79-50e1-407c-8bbd-11309206548a.png)
+
+          Fig-1 Inheritance memory diagram
+
+
+Inheritance is done by keyword **'extends'** which allows access to all class members of parent class.
+
+![Inheritance-2new-Page-2 (1)](https://user-images.githubusercontent.com/110398433/191459182-bfd3fb8c-df63-407d-8b5d-46eaeeb003b2.jpg)
+
+          Fig-2 Functionality of extends keyword
+
+From the above fig-2, we can clearly see that all the instantiation steps are reduced down to one single keyword **'extends'** which allows to have all the class members of parent to the child.
+
+**code snippet**:-
+```
+  class A;
+    int a = 5;
+    function void disp();
+      $display("1.Value of a = %0d",a);
+    endfunction:disp
+ 
+  endclass:A
+ 
+  class B extends A;
+   int a = 6;
+   function void display();
+      $display("2.Value of a = %0d",a);
+   endfunction:display
+ 
+  endclass:B
+ 
+  module inh_sam();
+     B b1;
+     initial begin
+      b1 = new;
+      b1.a = 10;
+      b1.disp();
+      b1.display();
+ 
+     end
+  endmodule:inh_sam 
+```
+
+**Output**:-
+
+![inh_output_new-Page-3](https://user-images.githubusercontent.com/110398433/191522557-3901a30b-ec83-4259-ad18-e6239d51fb01.jpg)
+
+          Fig-
+
+## Polymorphism
+Polymorphism allows to access the sub-class methods using super-class objects. Any subclass object can be assigned to super-class object. In polymorphism, same handle (or) metthods take different forms.
+
+**code snippet**:-
+ ```
+  class parent;
+    int a;
+    int b;
+    virtual function void display();
+       a = 1;
+       b = 2;
+       $display("This is parent class");
+       $display("a = %0d, b= %0d",a,b);
+    endfunction:display
+  endclass:parent
+ 
+  class child1 extends parent;
+    int c,d,e;
+    function void display();
+      a = 3;
+      b = 4;
+      e = a+b;
+      $display("This is child class");
+      $display("a = %0d, b = %0d,e = %0d",a,b,e);
+    endfunction:display
+  endclass:child1
+ 
+  class child2 extends parent;
+    int f;
+    function void display();
+      f= a*b;
+      $display("f = %0d",f);
+      endfunction:display
+  endclass:child2
+ 
+  module poly_ex();
+ 
+    parent p1[1:0];
+    child1 c;
+    child2 c2;
+ 
+    initial begin
+      c = new();
+      p1[0] = c;
+      p1[1] = new();
+ 
+      p1[0].display();
+      p1[1].display();
+ 
+    end
+ 
+  endmodule:poly_ex
+```
+
+**Output**:-
+
+![poly-output new-Page-2](https://user-images.githubusercontent.com/110398433/191521797-4fdb4181-8566-4300-a7ca-34b78b984f7d.jpg)
+
+          Fig- 
+
+## Abstract/Virtual class
+
+Abstract class is a virtual class which cannot be instantiated directly in the program(in other words an object a virtual/abstract class cannot be created). If you try doing so it will throw compile time error. They will be used as a base class to inherit any no of classes. We generally use abstract class to define a prototype in advance, that means an abstract class provides a template for a set of derived classes. So you know you have a basic set of methods/properties that already exist, that makes it simpler for you to focus on the new intent for which you are creating this derived class.
+
+**code snippet**:- 
+```
+  virtual class A;
+     int a = 5;
+     function void disp();
+      $display("1.Value of a = %0d",a);
+    endfunction:disp
+ 
+  endclass:A
+ 
+  class B extends A;
+    int a = 6;
+    function void display();
+      $display("2.Value of a = %0d",a);
+    endfunction:display
+ 
+  endclass:B
+ 
+  module abstract_ex();
+ 
+    B b1;
+    initial begin
+      b1 = new;
+      b1.a = 10;
+      b1.disp();
+      b1.display();
+    end
+ 
+  endmodule:abstract_ex
+```
+
+**Output**:-
+
+![abstract-output new](https://user-images.githubusercontent.com/110398433/191521079-4943574c-7576-445f-b785-e7782ce52b8a.png)
+
+          Fig-
+### Pure virtual method
+
+A **virtual** method inside an abstract class can be declared by keyword **'pure'** and is called **pure virtual** method. The class will automatically consider it as abstract class if any **pure virtual** method is used. It should be only added in the base class. In the base class we are not allowed to add any function definition to the pure virtual function. It is important to know that all the derived classes of a base class with pure virtual methods should have implementation of all pure virtual methods individually.
+**code snippet**:-
+```
+ virtual class A;
+    int a,b,c;
+    pure virtual function void disp();
+    pure virtual task sum();
+ 
+  endclass:A
+ 
+  class B extends A;
+ 
+    virtual function void disp();
+      a =10;
+      $display("1.Value of a = %0d, b = %0d, c = %0d",a,b,c);
+    endfunction:disp
+ 
+    virtual task sum();
+     c = a+b;
+     $display("2.Value of a = %0d, b = %0d, c = %0d",a,b,c);
+    endtask:sum
+ 
+  endclass:B
+ 
+  module pure_vir_fun_ex();
+ 
+    B b1;
+    initial begin
+      b1 = new;
+      b1.disp();
+      b1.b = 35;
+      b1.sum;
+ 
+    end
+ 
+  endmodule:pure_vir_fun_ex
+```
+ 
+**Output**:-
+
+![pvf_new](https://user-images.githubusercontent.com/110398433/191534008-9c6270c5-88ee-4f1e-8ddd-be2978782f74.png)
+
+          Fig-
+
+## Encapsulation
+
+Encapsulation is the technique of hiding data the data within the class and making it available only through the methods. It seals the data and allows only access to trusted users(i.e., by the methods of the class).
+
+          Fig- 
+
+### Local
+
+A member declared as **'local'** is accessible only to the methods of the same class and will not be able to access by child class.
+
+**code snippet**:-
+
+  class parent;
+    bit [3:0] a,b;
+    local bit[5:0] c;
+    local int d = 5;
+
+  function int sum(bit[4:0]val1,val2);
+     c = val1 + val2;
+     return c;
+  endfunction:sum
+
+  function void display();
+     $display("sum = %0d",c);
+     $display("d = %0d",d);
+  endfunction:display
+
+ endclass:parent
+
+ class child extends parent;
+
+  function void disp();
+     
+  endfunction
+
+ endclass:child
+
+
+ module encap();
+
+   parent p;
+   child c1;
+   int e;
+
+   initial begin
+     p = new();
+     c1 = new();
+     e = p.sum(1010,0101);
+     p.display();
+   end
+ endmodule:encap
+
+**Output**:-
+
+![local_errors_new-Page-2](https://user-images.githubusercontent.com/110398433/191585918-6a6cf5a9-24c8-4e07-839d-0c8831ae7307.jpg)
+
+          Fig-
+
+#### Errors expected if we access local variable by child class
+
+**code snippet**:-
+```
+ class parent;
+  bit [3:0] a,b;
+  local bit[5:0] c;
+  local int d = 5;
+
+  function int sum(bit[4:0]val1,val2);
+    c = val1 + val2;
+    return c;
+  endfunction:sum
+
+  function void display();
+    $display("sum = %0d",c);
+    $display("d = %0d",d);
+  endfunction:display
+
+ endclass:parent
+
+ class child extends parent;
+
+  function void disp();
+    display("d = %0d",d);
+  endfunction
+
+ endclass:child
+
+
+ module encap();
+
+  parent p;
+  child c1;
+  int e;
+
+  initial begin
+    p = new();
+    c1 = new();
+    e = p.sum(1010,0101);
+    p.display();
+    p.c = 5'b10;
+    p.display();
+    c1.disp();
+  end
+
+ endmodule:encap
+
+```
+**Output**:-  
+
+![local_errors_new drawio](https://user-images.githubusercontent.com/110398433/191592232-6b14be7f-02b7-42e3-b23c-4e777a01aa45.png)
+
+          Fig-
+
+### Protected
+
+Sometimes there will be necessity to access the members of parent class by the child class. This can be done by the keyword **'protected'**. By using **protected**, all the child classes will get the access to the base class members which are data protected.
+
+**code snippet**:-
+```
+ class parent;
+   bit [3:0] a,b;
+   protected bit[5:0] c;
+   protected int d = 5;
+
+   function int sum(bit[4:0]val1,val2);
+     c = val1 + val2;
+     return c;
+   endfunction:sum
+
+   function void display();
+     $display("sum = %0d",c);
+     $display("1.d = %0d",d);
+   endfunction:display
+
+ endclass:parent
+
+ class child extends parent;
+
+  function void disp();
+    $display("2.d = %0d",d);
+  endfunction
+
+ endclass:child
+
+
+ module prot();
+
+  parent p;
+  child c1;
+  int e;
+
+  initial begin
+    p = new();
+    c1 = new();
+    e = p.sum(1010,0101);
+    p.display();
+   // p.d = 10;
+    c1.disp();
+  end
+
+endmodule:prot
+```
+
+**Output**:-
+
+![protected_new](https://user-images.githubusercontent.com/110398433/191599857-a12d87b9-31d7-4a07-8290-0eea7f9a6e70.png)
+
+          Fig-
+
+### Public
+
+By default if we does not define any attributes with keywords **'local'** and **'protected'**, then by default it is **'public'**. It provides full access to all attributes and methods to child classes.
+
+**code snippet**:-
+ 
