Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -466,10 +466,9 @@ the output is shown in the below figure
      $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
       endmodule : top
 
-In below output for case1 first give posedge for both DUT and test in this case at 0 time both DUT and test outpur is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test only randomize value d = 0 but test sample previous value q = x.
-at 10ns my DUT give output d = 0 and q = 0, and at that time my test give output d = 0 and q = x.
-
-Now, at 20ns test randomize d value 0 to 1, that time Dut get 1 and give sample q output to 1, this clock cycle test only randomize value d = 1 but test sample previous value q = 0. at 20ns my DUT give output d = 1 and q = 1, and at that time my test give output d = 1 and q = 0.
+In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.
+At 10ns my DUT give output d = 0 and q = 0, and at that time my test(tb) give output d = 0 and q = x.
+Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give sampled q output to 1, this clock cycle test(tb) only randomize value d = 1 but test(tb) takes sampled previous value q = 0. at 20ns my DUT give output d = 1 and q = 1, and at that time my test give output d = 1 and q = 0.
  
 **Transcript output**
 
