Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -51,9 +51,11 @@ This system function is used to give the pseudorandom numbers.  These functions 
       end  
 
 * **Output Snap**  
-The below output shows the $random(),$urandom() value and shows the effect of the seed value.    
+The below output, fig -1 shows the $random(),$urandom() value and shows the effect of the seed value.    
 
 <img width="734" alt="cons_1" src="https://user-images.githubusercontent.com/110443268/190629477-ff70f07c-db95-4387-bdff-2b5ba7589cae.png">
+
+                             fig -1 Output - random function 
 
 **GitHub lab file link**  
 
@@ -91,21 +93,23 @@ The below example is of rand variable.
         initial begin  
         //  rand_function ra_f;  
         raf = new();  
-       $display ("rand - Randomizing the value of the variable in non-cycling form  ");  
+       $display ("rand - Randomizing the value of the variable in the non-cycling form  ");  
        for (int i =0;i <= 10;i++)begin  
        void'(raf.randomize ());  
         $display("Iteration = %0d Random value of a = %0d",i, raf.a);  
        end  
       end  
    
+In the above code, the class is declared as rand_function inside it the variable declared is 'a '. random variable rand is used to randomize the value of the variable 'a'. Inside the module to randomize the class, randomize() function is used. for loop is used to get the randomised value of the variable 11 times.  
+
 
 * **Output Snap**  
-Here, the randomization of the variable is done using the rand and the output is iterated for 11 times using the for loop.  
+Here, the output shows the randomization of variables using rand.   
   
 
 <img width="632" alt="cons_2" src="https://user-images.githubusercontent.com/110443268/190632351-751fcc5f-d868-4806-b9dc-0640bdde233e.png">
 
-
+                            fig-2 Output - rand 
 
 **GitHub lab code link**  
 
@@ -136,12 +140,14 @@ The below example is for randc variable.
       end  
       end  
 
-   
+ Above code, the class declared is pack inside class variable declared is a. Using the randc, variable a is randomized. Inside module, randomize () is used to randomize the class and for loop is iterating from 0 to 12.      
+
 * **Output Snap**   
-Here, the variable is randomised using the randc which is cyclic in nature. The output is randomised 13 times using the for a loop. 
- 
+The below output shows the randomization of variable using the randc.   
+
 <img width="569" alt="cons_3" src="https://user-images.githubusercontent.com/110443268/190633546-3f5186af-d62a-4ab5-9e17-4ec6376bedc3.png">
 
+                                       fig-3 Output- randc 
 
 **GitHub lab code link**   
  
@@ -202,10 +208,12 @@ The below example will show the constraint declaration with the use of the exter
       end  
 
 * **Output Snap**  
-Here, the output shows the randomization of a variable using an extern constraint.
+ 
+The output, fig-4 shows the randomization of a variable using an extern constraint.
 
 <img width="563" alt="cons_10" src="https://user-images.githubusercontent.com/110443268/191426898-5c66163a-fe09-4466-8b9f-7188b90d012c.png">
 
+                                  fig-4 Output- extern constraint 
 
 **GitHub Lab file link**  
  
@@ -223,7 +231,7 @@ In a static array, randomization is possible only for the array elements. As the
 Declare the array as the keyword rand or randc; on randomization, the elements of the array will get random values.
 
 * **Example -1**  
-The below example show the randomization of the one-dimensional static array.  
+The below example show the randomization of the one-dimensional static array without using the constraint.  
 
        class static_array;  
        randc byte  a[5];  
@@ -234,7 +242,6 @@ The below example show the randomization of the one-dimensional static array.
        stat_arr = new();  
        $display ("Static array - Size is already declared. So, we can only randomize ");  
        $display ("               the elements of it . ");  
-       $display ("rand byte a[5];  // Data type is byte");  
        $display ("Before randomize the elements of array 'a'");  
        $display ("Assign by the default value of array data type.");  
        $display (" %0p", stat_arr.a);  
@@ -243,15 +250,15 @@ The below example show the randomization of the one-dimensional static array.
        $display ("Output =  %0p ",stat_arr.a);   
        end  
      
-
-  
+Above code, declared an array 'a[5]' of byte data type. The randomization is done by using the randomization function. Without using void, after compilation, the compiler displays a warning.  Here, after the randomization of the class, the randomized array will be displayed.  
+ 
 
 * **Output Snap**   
-Here, the output will show two outputs one is before randomization and the other is after randomization.  
+Below fig-5 shows the output of randomization of the one array without using constraint.   
 
 <img width="671" alt="cons_5" src="https://user-images.githubusercontent.com/110443268/190843990-17077350-b02a-4c75-8299-4580f5681380.png">
 
- 
+                                     fig-5 Output-static array randomization  
 
 **GitHub lab code link**  
 
@@ -274,19 +281,23 @@ The below example shows the randomization of a two-dimensional static array with
       end
       end   
 
+Above code, the array declared is a[2][4] with each element of size 4 bits. Inside the module, for loop is used to get more iterations.   
 
-* **Output Snap**  
-Here, the output, shows the randomization of a two-dimensional array using rand and using for loop to randomised it 6 times.   
+
+* **Output Snap**  T
+he output shown in fig-6, the randomization of a two-dimensional array.     
 
 <img width="872" alt="cons_8" src="https://user-images.githubusercontent.com/110443268/190866664-ad77e697-fed4-476d-b0e8-033171262c8c.png">
 
+                                    fig-6 Output- multidimensional array randomization 
 
 **GitHub Lab File Link**  
 
 **GitHub Lab Output Link**  
   
 * **Example -3**  
-The below example show the randomization of the multidimensional static array using the constraint. Inside the constraint, foreach loop is used to give the condition to the variable. 
+The below example show the randomization of the multidimensional static array using the constraint. Inside the constraint, foreach loop is used to give the condition to the variable.  Here, the array randomization is done 6 times. As we can see, all the element's value is less than 12.  
+
 
       class class_1;  
       rand bit [4:0]a[2:0][3:0];  
@@ -308,12 +319,13 @@ The below example show the randomization of the multidimensional static array us
         $display (" Iteration = %0d, Array = %0p",i,pack.a);   
         end  
         end  
-     
+    
 * **Output Snap**  
-  
-Here, the array randomization is done 6 times. As we can see, all the element's value is less than 12.  
+  Below fig-7 show the randomization of a multidimensional array using constraint.  
 
 <img width="663" alt="cons_11" src="https://user-images.githubusercontent.com/110443268/191428807-082a63a5-0997-4b64-bdf3-2b88ee2bbfab.png">
+
+                              fig-7 
 
 
 **GitHub Lab File Link**   
@@ -352,10 +364,11 @@ The output after randomization is an empty array if the size is not constrained.
       end  
       end  
 
+Above code, first declaring a dynamic array 'dyn_arr[]'. Inside class declaring a constraint for giving the size range. Inside the module, randomize() function is used to randomize the class. The size of the array is between 3 to 7 using constraint. The output will be displayed after randomization for (size of array +1) times.     
+  
 
 * **Output Snap**  
-Here, the size of the array is between 3 to 7 using constraint. The output will be displayed after randomization for (size of array +1) times 
-
+Below output is for dynamic array randomzation.
 <img width="654" alt="cons_7" src="https://user-images.githubusercontent.com/110443268/190845175-40912616-514a-42e2-942f-9bd099bc3b6b.png">
 
  
