Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -325,7 +325,7 @@ The below example show the randomization of the multidimensional static array us
 
 <img width="663" alt="cons_11" src="https://user-images.githubusercontent.com/110443268/191428807-082a63a5-0997-4b64-bdf3-2b88ee2bbfab.png">
 
-                              fig-7 
+                              fig-7 Output - multidimensional array randomization using constraint
 
 
 **GitHub Lab File Link**   
@@ -368,9 +368,11 @@ Above code, first declaring a dynamic array 'dyn_arr[]'. Inside class declaring 
   
 
 * **Output Snap**  
-Below output is for dynamic array randomzation.
-<img width="654" alt="cons_7" src="https://user-images.githubusercontent.com/110443268/190845175-40912616-514a-42e2-942f-9bd099bc3b6b.png">
+The below output is for dynamic array randomization.  
 
+<img width="654" alt="cons_7" src="https://user-images.githubusercontent.com/110443268/190845175-40912616-514a-42e2-942f-9bd099bc3b6b.png">
+                      
+                                   fig-8 Output - dynamic array randomization 
  
 **Lab link**
 
