--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -380,7 +380,29 @@ The below output is for dynamic array randomization.
 
 ### Queue  
 Queue size will get randomized based on size constraints, and queue elements will get random values.  
-The below example will show, how to randomize the elements of the queue.  
+The below example will show, how to randomize the elements of the queue.
+
+* **Example**  
+
+The below example shows the randomization of elements of the queue and using constraint declaring the size of the queue.  
+
+
+     class class_1;
+     rand bit [3:0]que[$];
+     constraint que_const{que.size()==5;}
+     endclass
+     module mod;
+     class_1 pack;
+     initial begin
+     pack=new;
+     for (int i = 0;i<=pack.que.size();i++)begin
+     void'(pack.randomize());
+     $display (" Iteration = %0d The value of array =%0p",i,pack.que); 
+     end
+    end
+    endmodule
+  
+ 
 * **Output snap**  
 **lab link**  
 **output log file link**  
