Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -277,7 +277,7 @@ Output of AND gate using modports in interface remains same for both of the abov
 
 ![modport_andgate](https://user-images.githubusercontent.com/110448056/189105843-cc4578b3-8544-4062-af44-990ee2745450.png)
 
-                               Figure.1 AND gate Output
+                               Figure.6 AND gate Output
 
 **Github lab code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_team_kachori/interface/modports
 
@@ -317,13 +317,13 @@ The below  figure shows that default input and output skew
 
 ![image](https://user-images.githubusercontent.com/110484152/188798547-897dab18-5cd5-423c-b94d-048be1dc1b92.png)   
 
-                                        Fig 1: default input #1step output #0  
+                                        Fig.7: default input #1step output #0  
 
 The below figure shows the Input skew and output skew    
 
 ![image](https://user-images.githubusercontent.com/110484152/188549973-1030d92b-3525-460f-a83a-eb51cc694689.png)  
 
-                                         Fig 2: Input skew and output skew    
+                                         Fig.8: Input skew and output skew    
 
 Input  signals are sampling with respect to the clock event. If an input skew is specified then the signal is sampled at skew time units before the clock event. Then the  output signals are driving skew simulation time units after the corresponding clock event. Input  skew is implicitly negative because it happens before the clock.   
 
