Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -331,7 +331,7 @@ In Input skew, the input signal sampled at the end of previous step ie, postpone
 
 Eg. default input #3ps output #2
 
-**Syntax**    
+**Syntax:**    
 
 `clocking cb @(posedge clk);`  
 `default input #1step output #0;`  
@@ -340,7 +340,7 @@ Eg. default input #3ps output #2
 `endclocking`    
 
 
-**Example**  
+**Example:**  
 
 `clocking cb @(posedge clk);`  
 `default input #1 output #2;`  
@@ -354,9 +354,11 @@ Eg. default input #3ps output #2
 ---
 
 
-Example D_flipflop
+**Example:D_flipflop**
 
 ![clocking block](https://user-images.githubusercontent.com/110412474/190890934-67850b63-33fc-4009-a977-4539941d2a15.jpg)
+                 
+                           Fig.9: Block diagram of test design
 ---
 
 
@@ -364,6 +366,8 @@ Example D_flipflop
 
 
 ![posedge_df_cb](https://user-images.githubusercontent.com/110448382/190957995-a87993b5-0aeb-491f-80b4-caf6775d81ff.png)
+
+               Fig.10: Block diagram for triggering the DUT and Test at posedge clock 
 
 In this case both DUT (clocking block clock) and Test is triggered at positive edge (interface clock).  
 Here in this scenario, the wave form output and display statement output is mismatching.  
@@ -465,7 +469,7 @@ the output is shown in the below figure
      $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
       endmodule : top
 
-In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.
+Figure:11,In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.
 At 10ns my DUT give output d = 0 and q = 0, and at that time my test(tb) give output d = 0 and q = x.
 Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give sampled q output to 1, this clock cycle test(tb) only randomize value d = 1 but test(tb) takes sampled previous value q = 0. at 20ns my DUT give output d = 1 and q = 1, and at that time my test give output d = 1 and q = 0.
  
@@ -473,10 +477,14 @@ Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give samp
 
 ![case_t1](https://user-images.githubusercontent.com/110448382/191226150-10b956b4-86d8-4c3d-8d58-2c2917396a8a.png)
 
+                      Fig.11: Transcript output of case1.
+
 
 **output of d_ff for all clock cycles**
 
 ![case1](https://user-images.githubusercontent.com/110448382/191226229-04947bc6-b25a-4572-946d-28b00d0d0193.png)
+
+                         Fig.12: output waveform of case1.
 
 
 
@@ -484,6 +492,8 @@ Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give samp
 ## CASE : 2
 
 ![negedge_dff_cb](https://user-images.githubusercontent.com/110448382/190958047-e7f3e81c-e8df-490d-bddb-c8f8c58a50fa.png)
+
+                          Fig.13:Block diagram for triggering the DUT in negedge and test in Posedge
 
 In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (same interface clock).  
 Here in this scenario, the wave form output is mismatching with respect to the test(tb) and DUT waveform is matching, display statement output is matching.  
@@ -592,13 +602,12 @@ the output is shown in the below figure
 
 ![case_t2](https://user-images.githubusercontent.com/110448382/191226341-3fef2183-f734-476f-9969-1f91af00175e.png)
 
-
+                                 Fig.14: Transcript output of case2.
 **output of d_ff for all clock cycles**
 
 ![case2](https://user-images.githubusercontent.com/110448382/191226469-ef5683d9-59d5-44f1-b148-ef6ae061435b.png)
 
-
-
+                                    Fig.15: output waveform of case2.
 ## CASE : 3
 
 In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (interface clock).  
@@ -718,6 +727,8 @@ output:
 
 ![image](https://user-images.githubusercontent.com/110412474/190886641-84dcb413-06da-4a4d-b07b-ef8150e37967.png)
 
+                            Fig.16: 1st duty cycle output of case-3.
+
 `DUT side [0]=d_tb_drive:x q_dut_sample:x`  
  `test side [3]=d_tb_drive:x q_dut_sample:x`  
 
@@ -727,6 +738,8 @@ input #1step: denotes the negative time delay from the edge of the clock(negativ
 output #0 :  At the negative edge (DUT) at #0 it drive the sampled value i.e output skew.
 
 ![@5ns paint](https://user-images.githubusercontent.com/110412474/190887852-dc27b953-8346-4b87-b6a2-20b78ed0ce54.jpg)
+                                 
+                                          Fig.17: 1st duty cycle output of case-3.
 
 
 `DUT side [5]=d_tb_drive:0 q_dut_sample:0`
@@ -768,6 +781,8 @@ wave form @negedge clock
 **Transcript output**
 
 ![case_t3](https://user-images.githubusercontent.com/110448382/191226612-0350328e-6f31-4743-b085-ca7872a1cb2f.png)
+
+                    
 
 
 **output of d_ff for all clock cycles**
