Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -358,10 +358,8 @@ Eg. default input #3ps output #2
 
 ![clocking block](https://user-images.githubusercontent.com/110412474/190890934-67850b63-33fc-4009-a977-4539941d2a15.jpg)
                  
-                           Fig.9: Block diagram of test design
+                           Fig.9: Block diagram of d_ff design
 ---
-
-
 ## CASE : 1
 
 
@@ -371,7 +369,7 @@ Eg. default input #3ps output #2
 
 In this case both DUT (clocking block clock) and Test is triggered at positive edge (interface clock).  
 Here in this scenario, the wave form output and display statement output is mismatching.  
-the output is shown in the below figure  
+the output is shown in the below Figure.11
 
 **Example code:**
 
@@ -497,7 +495,7 @@ Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give samp
 
 In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (same interface clock).  
 Here in this scenario, the wave form output is mismatching with respect to the test(tb) and DUT waveform is matching, display statement output is matching.  
-the output is shown in the below figure  
+the output is shown in the below Figure.14  
 
 **Example code:**
 
@@ -613,7 +611,7 @@ the output is shown in the below figure
 In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (interface clock).  
 Here in this scenario, the wave form output DUT and Tb is matching and display statement output is matching.  
 here we randomizing the value of 'd' after some delay time, so that the waveform is matching in this case-3 compared to case-2  
-the output is shown in the below figure  
+the output is shown in the below Figure.16  
 
 **Example code:**
 
@@ -727,7 +725,7 @@ output:
 
 ![image](https://user-images.githubusercontent.com/110412474/190886641-84dcb413-06da-4a4d-b07b-ef8150e37967.png)
 
-                            Fig.16: 1st duty cycle output of case-3.
+                            Fig.16: DUT and Tb output at initial condition.
 
 `DUT side [0]=d_tb_drive:x q_dut_sample:x`  
  `test side [3]=d_tb_drive:x q_dut_sample:x`  
@@ -739,7 +737,7 @@ output #0 :  At the negative edge (DUT) at #0 it drive the sampled value i.e out
 
 ![@5ns paint](https://user-images.githubusercontent.com/110412474/190887852-dc27b953-8346-4b87-b6a2-20b78ed0ce54.jpg)
                                  
-                                          Fig.17: 1st duty cycle output of case-3.
+                                          Fig.17: DUT output triggered at negative edge.
 
 
 `DUT side [5]=d_tb_drive:0 q_dut_sample:0`
@@ -751,12 +749,15 @@ wave form @posedge clock
 
 ![image](https://user-images.githubusercontent.com/110412474/190888014-4bbe0ae1-2133-48c0-a4f6-cce58c4519f3.png)
 
+                                          Fig.18: Tb output at 2nd duty cycle
  `test side[13]=d_tb_drive:0 q_dut_sample:0`
 
 Here at negative edge the DUT is triggered 
 wave form @negedge clock  
 
 ![image](https://user-images.githubusercontent.com/110412474/190889246-63408eef-2892-4a06-a90f-77d6b0b7ebe0.png)
+ 
+                                         Fig.19: DUT output at 2nd duty cycle
 
 `DUT side [15]=d_tb_drive:1 q_dut_sample:1`
 
@@ -767,12 +768,16 @@ wave form @posedge clock
 
 ![image](https://user-images.githubusercontent.com/110412474/190889374-4515e80d-db33-4daa-a695-ae120fdfc43f.png)
 
+                                  Fig.20: Tb output at 2nd duty cycle
+
 `test side[23]=d_tb_drive:1 q_dut_sample:1  `
 
 Here at negative edge the DUT is triggered 
 wave form @negedge clock
 
 ![image](https://user-images.githubusercontent.com/110412474/190889429-fc69ec23-b308-4526-8130-daa5109802c2.png)
+                               
+                                         Fig.21: DUT output at 2nd duty cycle
 
 ` DUT side [25]=d_tb_drive:1 q_dut_sample:1`
 
@@ -782,14 +787,15 @@ wave form @negedge clock
 
 ![case_t3](https://user-images.githubusercontent.com/110448382/191226612-0350328e-6f31-4743-b085-ca7872a1cb2f.png)
 
-                    
+                                      Fig.22: Transcript output of case3.
 
 
 **output of d_ff for all clock cycles**
 
 ![case3](https://user-images.githubusercontent.com/110448382/191226727-9b390710-cc75-46d1-b909-2fde6c65218a.png)
 
-
+                                         Fig.23: output waveform of case3.
+                              
 ---     
   
 **Advantages of Clocking Block**
@@ -926,7 +932,7 @@ Example1: Fulladder
 ![fulladder](https://user-images.githubusercontent.com/110412474/189057965-1d4bdfbf-9bdc-4d18-b843-e10d7a2fb26f.jpg)
 
  
-                                     Fig.1: Design Block diagram
+                                     Fig.24: Design Block diagram
 
 Here in the Figure:1, the driver is a class here we declare the virtual interface because inside the class we cannot call the interface directly because interface is static component and class is dynamic component. so this virtual keyword is used to create the instance in the class (it will create the memory space) inside the class. In driver we generates the random stimulus and send to the interface, the DUT signals are declared in the interface. The DUT output is given to the interface. The test block consist of class component i.e (driver.sv)  and the top module consist of all the component such as test, interface and DUT. The instance of all component is created in the Top module/block.
 
@@ -938,7 +944,7 @@ Here in the Figure.2 shows the output of full adder where a, b & cin are the inp
 ![fulladder2](https://user-images.githubusercontent.com/110412474/189060495-1def6aff-2ef9-4597-83e5-47db63e09aa8.jpg)
 
 
-                                    Fig: Output of Full adder 
+                                    Fig.25: Output of Full adder 
 
 **Github lab code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_team_kachori/interface/Virtual_interface
 
